Configure CI to include JaCoCo coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,3 +25,7 @@ sonar.java.binaries=target/classes
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+
+
