--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,25 @@
           <excludeFilterFile>${basedir}/src/conf/spotbugs-exclude-filter.xml</excludeFilterFile>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.8</version> <!-- Use the latest version -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+           <id>report</id>
+           <phase>verify</phase>
+           <goals>
+             <goal>report</goal>
+           </goals>
+          </execution>
+       </executions>
+     </plugin>
     </plugins>
   </build>
 
