--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,13 @@
             <rulesets>
               <ruleset>src/conf/pmd-ruleset.xml</ruleset>
             </rulesets>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.2.0</version>
+          <configuration>
             <archive>
               <manifest>
                 <mainClass>org.apache.commons.lang3.PasswordGenerator</mainClass>
