--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
               <exclude>site-content/**</exclude>
               <exclude>src/site/resources/.htaccess</exclude>
               <exclude>src/site/resources/download_lang.cgi</exclude>
-              <exclude>.github/workflows/sonarcloud.yml</exclude>
+              <exclude>.github/workflows/**</exclude>
               <exclude>src/site/resources/release-notes/RELEASE-NOTES-*.txt</exclude>
               <exclude>src/test/resources/lang-708-input.txt</exclude>
             </excludes>
