--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push with Versioning
 on:
   push:
     branches:
-      - master  # Trigger workflow on pushes to the master branch
+      - master
 
 jobs:
   build-and-push:
@@ -15,25 +15,36 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Log in to DockerHub
+      # Step 2: Set up JDK for Maven
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # Step 3: Build the JAR file with Maven
+      - name: Build with Maven
+        run: mvn clean package
+
+      # Step 4: Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Get the Git commit SHA for versioning
+      # Step 5: Get the Git commit SHA for versioning
       - name: Extract Git Commit SHA
         id: git-info
         run: echo "::set-output name=sha::$(git rev-parse --short HEAD)"
 
-      # Step 4: Build the Docker image
+      # Step 6: Build the Docker image
       - name: Build Docker Image
         run: |
           docker build -t manyeki/password-generator-app:latest .
           docker tag manyeki/password-generator-app:latest manyeki/password-generator-app:${{ steps.git-info.outputs.sha }}
 
-      # Step 5: Push the Docker images to DockerHub
+      # Step 7: Push the Docker images to DockerHub
       - name: Push Docker Images
         run: |
           docker push manyeki/password-generator-app:latest
