--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push with Versioning
 on:
   push:
     branches:
-      - master
+      - master  # Trigger workflow on pushes to the master branch
 
 jobs:
   build-and-push:
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK for Maven
+      # Step 2: Set up JDK 17 for Maven
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -36,16 +36,16 @@ jobs:
       # Step 5: Get the Git commit SHA for versioning
       - name: Extract Git Commit SHA
         id: git-info
-        run: echo "::set-output name=sha::$(git rev-parse --short HEAD)"
+        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       # Step 6: Build the Docker image
       - name: Build Docker Image
         run: |
           docker build -t manyeki/password-generator-app:latest .
-          docker tag manyeki/password-generator-app:latest manyeki/password-generator-app:${{ steps.git-info.outputs.sha }}
+          docker tag manyeki/password-generator-app:latest manyeki/password-generator-app:${{ env.sha }}
 
       # Step 7: Push the Docker images to DockerHub
       - name: Push Docker Images
         run: |
           docker push manyeki/password-generator-app:latest
-          docker push manyeki/password-generator-app:${{ steps.git-info.outputs.sha }}
+          docker push manyeki/password-generator-app:${{ env.sha }}
