--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push with Versioning
+name: Docker Build and Push with Timestamp Tags
 
 on:
   push:
@@ -33,19 +33,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 5: Get the Git commit SHA for versioning
-      - name: Extract Git Commit SHA
-        id: git-info
-        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      # Step 5: Generate a timestamp for versioning
+      - name: Generate Timestamp
+        id: timestamp
+        run: echo "timestamp=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
-      # Step 6: Build the Docker image
+      # Step 6: Build the Docker image with a timestamp tag
       - name: Build Docker Image
         run: |
-          docker build -t manyeki/password-generator-app:latest .
-          docker tag manyeki/password-generator-app:latest manyeki/password-generator-app:${{ env.sha }}
+          docker build -t manyeki/password-generator-app:${{ env.timestamp }} .
 
-      # Step 7: Push the Docker images to DockerHub
-      - name: Push Docker Images
-        run: |
-          docker push manyeki/password-generator-app:latest
-          docker push manyeki/password-generator-app:${{ env.sha }}
+      # Step 7: Push the Docker image to DockerHub
+      - name: Push Docker Image
+        run: docker push manyeki/password-generator-app:${{ env.timestamp }}
