--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
       <version>3.0.2</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.9</version>
+    </dependency>
   </dependencies>
 
   <distributionManagement>
