--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,6 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-text</artifactId>
       <version>${commons.text.version}</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
@@ -115,6 +114,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.9</version>
+    </dependency>
+    <dependency>
+     <groupId>org.mockito</groupId>
+     <artifactId>mockito-core</artifactId>
+     <version>4.11.0</version> <!-- Use the latest version -->
+     <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -339,6 +344,16 @@
         <artifactId>spotbugs-maven-plugin</artifactId>
         <configuration>
           <excludeFilterFile>${basedir}/src/conf/spotbugs-exclude-filter.xml</excludeFilterFile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.9.11</version>
+        <configuration>
+          <targetClasses>
+           <param>org.apache.commons.lang3.*</param>
+          </targetClasses>
         </configuration>
       </plugin>
       <plugin>
